Bug 877760 - XPConnect always logs an error when a component doesn't implement a method. r=mrbkap